// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module error on create feed 1`] = `""`;

exports[`module factory rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module function rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module generate simple rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module generate simple rss in subdir 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module multi rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module multi rss 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module no type set 1`] = `""`;

exports[`module non-latin rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Популярные новости России и мира</title>
        <link>http://site.ru/feed.xml</link>
        <description>Новости России и мира на сайте site.ru</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>https://github.com/nuxt-community/feed-module</generator>
    </channel>
</rss>"
`;

exports[`module object rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;

exports[`module simple atom 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<feed xmlns=\\"http://www.w3.org/2005/Atom\\">
    <id>http://example.com/</id>
    <title>Feed Title</title>
    <updated>2000-07-14T00:00:00.000Z</updated>
    <generator>awesome</generator>
    <author>
        <name>John Doe</name>
        <email>johndoe@example.com</email>
        <uri>https://example.com/johndoe</uri>
    </author>
    <link rel=\\"alternate\\" href=\\"http://example.com/\\"/>
    <link rel=\\"self\\" href=\\"https://example.com/atom\\"/>
    <subtitle>This is my personal feed!</subtitle>
    <logo>http://example.com/image.png</logo>
    <icon>http://example.com/favicon.ico</icon>
    <rights>All rights reserved 2013, John Doe</rights>
</feed>"
`;

exports[`module simple json 1`] = `
"{
    \\"version\\": \\"https://jsonfeed.org/version/1\\",
    \\"title\\": \\"Feed Title\\",
    \\"home_page_url\\": \\"http://example.com/\\",
    \\"feed_url\\": \\"https://example.com/json\\",
    \\"description\\": \\"This is my personal feed!\\",
    \\"icon\\": \\"http://example.com/image.png\\",
    \\"author\\": {
        \\"name\\": \\"John Doe\\",
        \\"url\\": \\"https://example.com/johndoe\\"
    },
    \\"items\\": []
}"
`;

exports[`module simple rss 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Feed Title</title>
        <link>http://example.com/</link>
        <description>This is my personal feed!</description>
        <lastBuildDate>Fri, 14 Jul 2000 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>awesome</generator>
        <image>
            <title>Feed Title</title>
            <url>http://example.com/image.png</url>
            <link>http://example.com/</link>
        </image>
        <copyright>All rights reserved 2013, John Doe</copyright>
    </channel>
</rss>"
`;
